# better-im

./: .gitignore  BUILD.md  Cargo.toml  README.md  package-lock.json  package.json
core/: Cargo.toml
core/src/: lib.rs  models.rs  reader.rs
core/tests/: attachments.rs  attributed_body.rs  synthetic_db.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  queries.ts  styles.css  types.ts
frontend/src/components/: Avatar.tsx  FdaOnboarding.tsx  GalleryView.tsx  InsightsView.tsx  LinksView.tsx  MessageBubble.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  ThreadComposer.tsx  ThreadView.tsx  TimelineView.tsx
frontend/src/lib/: contacts.ts  format.ts  relativeTime.ts  snippet.tsx  useInView.ts
index/: Cargo.toml
index/src/: db.rs  embeddings.rs  indexer.rs  lib.rs  model.rs  paths.rs  query.rs  schema.rs  urls.rs  watcher.rs
index/tests/: integration.rs  semantic.rs  watcher.rs
index/tests/common/: mod.rs
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  state.rs
src-tauri/src/contacts/: mod.rs  store.rs
src-tauri/src/features/: insights.rs  links.rs  media.rs  mod.rs  timeline.rs
