[package]
name = "better-im-core"
version = "0.1.0"
edition = "2021"
description = "Headless read-only iMessage chat.db reader for better-im (Phase 0)"
license = "GPL-3.0-or-later"

[lib]
name = "better_im_core"
path = "src/lib.rs"

[[bin]]
name = "better-im-cli"
path = "src/bin/cli.rs"

[dependencies]
imessage-database = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pinned to match imessage-database's `=0.4.44` requirement.
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Pinned to match imessage-database's `=0.40.0` (features are additive with it);
# `bundled` gives a self-contained SQLite so tests need no system libsqlite3.
rusqlite = { version = "=0.40.0", features = ["blob", "bundled"] }

[dev-dependencies]
# Reused in integration tests to build a synthetic chat.db fixture on the fly.
rusqlite = { version = "=0.40.0", features = ["blob", "bundled"] }
tempfile = "3"
